--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1>AJAX</h1>
     <button id="loadCss">加载CSS</button>
+    <br>
+    <br>
+    <button id="loadJs">加载JavaScript</button>
 </body>
 <script src="./main.js"></script>
 </html>
