--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <br>
     <br>
     <button id="loadJs">加载JavaScript</button>
+    <br>
+    <br>
+    <button id="loadHtml">加载HTML</button>
 </body>
 <script src="./main.js"></script>
 </html>
