AJAX 加载CSS JavaScript HTML XML JSON完成

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <br>
     <br>
     <button id="loadHtml">加载HTML</button>
+    <br>
+    <br>
+    <button id="loadXML">加载XML 请看控制台</button>
+    <br>
+    <br>
+    <button id="loadJson">加载JSON 请看控制台</button>
 </body>
 <script src="./main.js"></script>
 </html>
